tests/parsing/smtlib/v2.6/errors/087_echo_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/087_echo_unclosed_1.smt2", line 2, character 15-16:
2 | (echo "foobar" _)
                   ^
Error while parsing an echo command, read the reserved word '_',
      but expected a closing parenthesis.
